<resources>
    <string name="app_name">Smylee</string>
    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="action_settings">Settings</string>
    <string name="create_account">Create your account</string>
    <string name="create_post">Create New Post</string>
    <string name="validate_otp">Please Enter Otp</string>
    <string name="account">Already have an account?</string>
    <string name="select_category">Please select category</string>
    <string name="select_language">Please select language</string>
    <string name="record">Record</string>
    <string name="swipe">Swipe Up</string>
    <string name="album">Album</string>
    <string name="selectdate">Select Date</string>
    <string name="category">Category</string>
    <string name="discover">Discover</string>
    <string name="trending">Trending</string>
    <string name="uploading_video">Uploading video…</string>
    <string name="language">Language</string>
    <string name="stop">Stop</string>
    <string name="fbvideoshare">Share Post To FaceBook</string>
    <string name="instvideoshare">Share Post To Instagram</string>
    <string name="logout">logout</string>
    <string name="no_data_found">No content available. Please try later.</string>
    <string name="change_psw">Change Password</string>
    <string name="verify">Verify your phone number</string>
    <string name="otptext">One time password(OTP) has been sent to your phone number.</string>
    <string name="add_title">Tap to add title</string>
    <string name="verify_txt">Verify</string>
    <string name="picture">Picture</string>
    <string name="Resend">Resend</string>
    <string name="video">Capture Video</string>
    <string name="description_info">Info</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="emailhint">Email</string>
    <string name="pswhint">Password</string>
    <string name="loginwith">Or log in with</string>
    <string name="Login">Login</string>
    <string name="signIN">Sign In</string>
    <string name="chooseintrest">Choose Your \nInterest</string>
    <string name="chooselanguage">Choose Video Language \nPreference</string>
    <string name="chooseapplanguage">Choose Application \nLanguage</string>
    <string name="skip">Skip</string>
    <string name="recommedations">Get personalized video recommendation.</string>
    <string name="language_recommedations">Choose your video language preference</string>
    <string name="app_language_recommedations">Choose your language preference</string>
    <string name="notifications">Notifications</string>
    <string name="use">Use</string>
    <string name="add">Add</string>
    <string name="agree1">I have read and agree to terms &amp; conditions</string>
    <string name="post">Posts</string>
    <string name="alert_rating_review">If you have already cancelled the rating dialog or already provided your ratings then you need go to play store and provide your valuable feedback or update your ratings.</string>
    <string name="agree_validation">Please agree to terms &amp; conditions</string>
    <string name="change_language">Change Video Language</string>
    <string name="video_language_prefrence">Video Language</string>
    <string name="change_category">Change Interest</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="rate_app">Rate the App</string>
    <string name="self_post_msg">No post available.</string>
    <string name="other_post_msg">No post available for this user.</string>
    <string name="self_following_msg">You are not following any user yet.</string>
    <string name="self_follower_msg">You have no followers yet.</string>
    <string name="block_msg">You have not blocked any user</string>
    <string name="other_following_msg">This user not following any other user.</string>
    <string name="other_follower_msg">This user doesn\'t have any followers yet.</string>
    <string name="edt_profile">Edit Profile</string>
    <string name="mypost">My Posts</string>
    <string name="unblock">Unblock</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="blocked_user">Blocked Users</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="profilelogin">Profile will show here once you have signed in.</string>
    <string name="no_notification">No notifications available</string>
    <string name="sign_in_notification">Notifications will show here once you have signed in.</string>
    <string name="block_user">Blocked User</string>
    <string name="first_name">First Name</string>
    <string name="signup_back_msg">You have not completed the registration steps, if you go back then you will be logged out</string>
    <string name="register">Register</string>
    <string name="video_language">Video Language Selection</string>
    <string name="intro_message">

    </string>
    <string name="facebook_app_id">134922705142693</string>
    <string name="following_msg">Following user videos will show here once you have signed in and followed the other user</string>
    <string name="update_app">New version available, Would you like to update app?</string>
    <string name="msg_permission_setting_camera_storage">Smylee App requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="msg_permission_rationale1">Smylee App requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="msg_permission_rationale_storage">Smylee App requires to access file storage permission for better access.</string>
    <string name="msg_camera_storage_setting">Smylee App requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="photo">Photo</string>
    <string name="video_">Video</string>
    <string name="Home">Home</string>
    <string name="Explore">Explore</string>
    <string name="Notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="highspeed">High Speed Camera</string>
    <string name="ok">Ok</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="msg_permission_rationale">To use this feature, Allow camera and storage permission.</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="validation_msg_video_60seconds">You can\'t upload video more then 60 seconds.</string>
    <string name="settings">Settings</string>
    <string name="open_settings">OPEN SETTINGS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_stop">Play or Stop</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="something_went_wrong_try_again">Something went wrong , please try again !!!</string>
    <string name="something_went_wrong">Something went wrong !!!</string>
    <string name="internal_storage">Internal storage</string>
    <string name="Verification">Verification</string>
    <string name="block">Are you sure you want to block?</string>
    <string name="audioExtract">You have selected audio from existing video. Do you want to apply it in video?</string>
    <string name="VideoUpload">We are preparing the video and will notify you once it is uploaded.</string>
    <string name="remove_audio">Are you sure to remove audio?</string>
    <string name="Verification_txt">We have a sent you a one time password to your Email Id for email verification</string>
    <string name="search">Search</string>
    <string name="str_logout">Logout</string>
    <string name="Block">Block</string>
    <string name="BlockUser">Block User</string>
    <string name="delete">Delete</string>
    <string name="logout_txt">Are you sure you want to logout?</string>
    <string name="search_result">Search Results</string>
    <string name="people">People</string>
    <string name="viewmore">View More</string>
    <string name="followers">Followers</string>
    <string name="followings">Following</string>
    <string name="report_issue">Report an issue</string>
    <string name="report_header">Help us understand the problem.What is going on with this post?</string>
    <string name="for_you">For You</string>
    <string name="spam_1">Suspicious or Spam</string>
    <string name="spam_2">Sensitive photo or video</string>
    <string name="spam_3">Abusive or harmful</string>
    <string name="spam_4">Nudity or Offensive Content</string>
    <string name="spam_5">Violence</string>
    <string name="report">Report</string>
    <string name="spam_6">Expresses intentions of self-harm or suicide</string>
    <string name="live">Live</string>
    <string name="last_name">Last Name</string>
    <string name="validateSpam">Please select an issue to report</string>
    <string name="app_language_pref">Application Language</string>
    <string name="termsconditions">Terms &amp; Conditions</string>
    <string name="fill_first_name">Please enter first name</string>
    <string name="post_title">Please enter post title</string>
    <string name="fill_birth_date">Please enter birth date</string>
    <string name="following">Following</string>
    <string name="old_psw">Old Password</string>
    <string name="login_to_account">Login to your account</string>
    <string name="new_psw">New Password</string>
    <string name="select_languge">Please Select Video Language</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="preparingvideo">Preparing video...</string>
    <string name="confirm_psw">Confirm New Password</string>
    <string name="searchVideos">Search videos or people</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="flag">Flag</string>
    <string name="deletepost">Are you sure you want to delete a post?</string>
    <string name="username">Username</string>
    <string name="no_comments">No Comments Found</string>
    <string name="mutual">3 Mutual Friends</string>
    <string name="write_comment">Write a comment...</string>
    <string name="select_gender">Please select gender</string>
    <string name="fill_last_name">Please enter last name</string>
    <string name="email">Email</string>
    <string name="viewAll">View All</string>
    <string name="psw">Password</string>
    <string name="countrycode">+91</string>
    <string name="Phone">Phone</string>
    <string name="facebook_link">Please enter valid FaceBook Profile Link</string>
    <string name="instagram_link">Please enter valid Instagram Profile Link</string>
    <string name="youtube_link">Please enter valid YouTube Profile Link</string>
    <string name="phone_number">Phone Number</string>
    <string name="proceed">Proceed</string>
    <string name="str1">Changing your phone number will migrate your account info, groups and settings.</string>
    <string name="select_category_">Select Category</string>
</resources>