<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/container"
    android:fitsSystemWindows="false"
    tools:context=".notification.NotificationFragement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardPreventCornerOverlap="false"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:fontFamily="@font/avenirltstd_heavy"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_without_login"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:visibility="visible"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="center"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:id="@+id/tv_msg"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in_notification"
                android:textColor="@color/light_purple"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/avenirltstd_black"
                android:background="@drawable/button_border"
                android:text="@string/signIN"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/ll_with_login"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_notification"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_nodata_notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/avenirltstd_book"
                android:gravity="center"
                android:text="@string/no_notification"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>